fix: vertical align of uses page question mark

--- a/styles/css/app.css
+++ b/styles/css/app.css
@@ -773,6 +773,7 @@ nav {
     display: flex;
     flex: 1;
     flex-flow: row-reverse;
+    align-items: center;
   }
 }
 @media (min-width: 1280px) {
